get devices
