# server/internal/domain/repository/device.go
@@ -2,6 +2,7 @@ package repository
 
 import (
 	"context"
+	"github.com/getLynx-tech/lynx/internal/domain/entity"
 	interfaces "github.com/getLynx-tech/lynx/internal/domain/repository/interface"
 	"github.com/getLynx-tech/lynx/internal/domain/value"
 	"github.com/getLynx-tech/lynx/internal/infrastructure/postgres/sqlc"
@@ -14,6 +15,25 @@ type DeviceRepository struct {
 func NewDeviceRepository(queries *sqlc.Queries) interfaces.DeviceRepository {
 	return &DeviceRepository{queries: queries}
 }
+
+func (dr *DeviceRepository) GetAllDevices(ctx context.Context) ([]*entity.Device, error) {
+	rows, err := dr.queries.GetAllDevices(ctx)
+	if err != nil {
+		return nil, err
+	}
+
+	devices := make([]*entity.Device, len(rows))
+	for i, row := range rows {
+		devices[i] = &entity.Device{
+			Id:     row.DeviceID,
+			Status: row.Status,
+			X:      row.X,
+			Y:      row.Y,
+		}
+	}
+	return devices, nil
+}
+
 func (dr *DeviceRepository) UpsertDevicePosition(ctx context.Context, devicePos *value.DevicePosition) error {
 	status := "inactive"
 	if devicePos.IsActive {
