# server/internal/presentation/http/server.go
@@ -31,6 +31,7 @@ func NewServer(
 	engine.GET("/", rootHandler.GetRoot)
 	devices := engine.Group("/devices")
 	{
+		devices.GET("", deviceHandler.GetAllDevices)
 		devices.POST("/position", deviceHandler.UpsertPosition)
 	}
 
